auto-test/tests/chapter_10/invalid_types/extra_credit/static_var_case.c


int main(void) {
    static int i = 0;

    switch(0) {
        case i: return 0;
    }
    return 0;
}